setup_vpc.tf

resource "aws_vpc" "vpc" {
  cidr_block = var.vpc_cidr
  tags = {
    Name = "pratice_vpc1"
  }
}
